# nx-decomp-tools

./: .gitignore  .gitmodules  add_missing_functions.py  diff_settings.py  print_decomp_symbols.py  progress.py  rename_functions_in_ida.py  setup_common.py
ghidra_scripts/: DWARF.java  README.md  RenameFunctionsInGhidra.java
ida_scripts/: rename_functions_in_ida.py
mcp/: server.py
util/: checker.py  config.py  dsym.py  elf.py  tools.py  utils.py
viking/: Cargo.toml
viking/src/: checks.rs  elf.rs  functions.rs  repo.rs  ui.rs
viking/src/tools/: check.rs  decompme.rs  list_symbols.rs
