[package]
name = "viking"
version = "1.3.1"
edition = "2021"

[profile.release]
debug = 1
lto = "thin"

[dependencies]
addr2line = "0.19.0"
anyhow = "1.0"
argh = "0.1.6"
bad64 = "0.6.0"
capstone = { git = "https://github.com/leoetlino/capstone-rs" }
colored = "2"
cpp_demangle = "0.3.3"
crossterm = "0.22.1"
csv = "1.1"
ctrlc = "3.2.1"
goblin = "0.4"
inquire = "0.2.1"
itertools = "0.10.1"
json_compilation_db = "0.3.0"
lazy-init = "0.5.0"
lazy_static = "1.4.0"
lexopt = "0.2.0"
memmap = "0.6.1"
mimalloc = { version = "*", default-features = false }
owning_ref = "0.4.1"
rayon = "1.5.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rustc-hash = "1.1.0"
textwrap = "0.14.2"
toml = "0.5.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"

[[bin]]
name = "check"
path = "src/tools/check.rs"

[[bin]]
name = "listsym"
path = "src/tools/list_symbols.rs"

[[bin]]
name = "decompme"
path = "src/tools/decompme.rs"
