[package]
name = "viking"
version = "1.3.2"
edition = "2021"

[profile.release]
debug = 1
lto = "thin"

[dependencies]
addr2line = "0.19.0"
anyhow = "1.0"
argh = "0.1.6"
bad64 = "0.9.0"
capstone = { git = "https://github.com/leoetlino/capstone-rs", rev = "f5aa278e1982bca86a67ac8b8550ab1dd70f7d9d" }
colored = "2"
cpp_demangle = "0.4.0"
crossterm = "0.27.0"
csv = "1.1"
ctrlc = "3.2.1"
goblin = "0.8.0"
inquire = "0.7.4"
itertools = "0.12.1"
json_compilation_db = "0.3.0"
lazy-init = "0.5.0"
lazy_static = "1.4.0"
lexopt = "0.3"
memmap = "0.7"
mimalloc = { version = "*", default-features = false }
owning_ref = "0.4.1"
rayon = "1.5.1"
reqwest = { version = "0.12.3", features = ["blocking", "json", "multipart"] }
rustc-hash = "1.1.0"
textwrap = "0.16"
toml = "0.8.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
clang = { version = "2.0.0", features = ["runtime", "clang_10_0"] }
tempfile = "3.20.0"

[[bin]]
name = "check"
path = "src/tools/check.rs"

[[bin]]
name = "listsym"
path = "src/tools/list_symbols.rs"

[[bin]]
name = "decompme"
path = "src/tools/decompme.rs"
